# runner3

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANTI_PASTE_FEATURE.md  CLAUDE.md  Dockerfile  HINT_SYSTEM.md  HISTORIAS_USUARIO.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SESSION_2025-10-25.md  REFACTORIZACION_APLICADA.md  REFACTORIZACION_TYPESCRIPT.md  TESTING.md  add_hints_to_problems.py  app.py  crear_ejercicios_secuenciales.py  deploy_conftest.py  docker-compose.yml  generar_ejercicios_restantes.py  refactorizar_tests_secuenciales.py  run_local.sh  runner.py  start.bat  start.sh  test_runner.bat  test_submit.json
Back/: .env.example  .gitignore  DEPLOY_RENDER.md  Procfile  README.md  README_DEPLOY.md  RENDER_ENV_VARS.txt  RENDER_FIX_IMPORT_ERROR.md  RENDER_QUICKSTART.md  RENDER_TROUBLESHOOTING.md  SIN_DOCKER_CHANGELOG.md  pyproject.toml  render.yaml  requirements.txt  start-render.sh  start.bat  start.sh
Back/backend/: app.py  config.py  database.py  logging_config.py  models.py  requirements.txt  schemas.py  subjects_config.json  validators.py
Back/backend/problems/backend_python_dict/: rubric.json  starter.py  tests_hidden.py
Back/backend/problems/cond_aprobado/: prompt.md  rubric.json  starter.py  tests_public.py
Back/backend/problems/cond_categorias_edad/: metadata.json  rubric.json
Back/backend/problems/cond_mayor_de_dos/: prompt.md  starter.py  tests_hidden.py  tests_public.py
Back/backend/problems/cond_mayor_edad/: metadata.json  rubric.json  starter.py  tests_hidden.py  tests_public.py
Back/backend/problems/cond_numero_par/: rubric.json  tests_public.py
Back/backend/problems/cond_termina_vocal/: metadata.json  rubric.json  tests_public.py
Back/backend/problems/cond_terremoto/: prompt.md  (+1 more)
Back/backend/services/: problem_service.py  subject_service.py  submission_service.py
Back/backend/tests/: conftest.py  test_problem_service.py
Back/common/: __init__.py  config.py  database.py
Back/worker/: requirements-dev.txt  tasks.py
Back/worker/tests/: test_rubric_scorer.py
(+225 files in other folders)
